--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       top: calc(50% - 150px);
       left: calc(50% - 150px);
     }
+
+    table td,th{
+      padding: 5px;
+    }
   </style>
 </head>
 
@@ -241,38 +245,64 @@
         <div class="flex flex-col text-center justify-between">
           <div class="flex-col justify-center w-full flex mx-auto items-center ">
             <div class="w-full text-center mt-10 ">
-              <h2 class="text-3xl text-blue-900 text-center">Noakhali Science &amp; Technology University</h2>
-              <p class="text-xl">Noakhali-3814,Bangladesh</p>
+              <h2 class="text-3xl text-blue-900 text-center">Feni University</h2>
+              <p class="text-xl">Feni-3900, Bangladesh</p>
             </div><img src="./image/fu.png" alt="FU" style="width: 120px;">
           </div>
           <div class="text-2xl text-center">
-            <h1 class="text-3xl font-bold my-5">Assignment </h1>
-            <h2 class="mb-2"><span class="text-blue-900">Course Title :</span></h2>
-            <h2><span class="text-blue-900">Course Code :</span> </h2>
+            <h1 class="text-3xl font-bold my-5"></h1>
+            <h2 class="mb-2"><span class="text-blue-900">Course Title:</span> <span
+                class="courseTitle ml-2">#####</span></h2>
+            <h2><span>Course Code:</span> <span class="courseCode ml-2">#####</span></h2>
           </div>
-          <div class="mt-3 text-center p-1">
-            <div class="my-5">
-              <h2 class="text-blue-900 text-xl uppercase">Prepared to</h2>
-              <h3 class="text-2xl"></h3>
-              <h4 class="text-xl"></h4>
-              <h4>Department of </h4>
-              <h4>Noakhali Science &amp; Technology University</h4>
-            </div>
-            <div class="my-5">
-              <h2 class="text-blue-900 uppercase text-xl">Prepared by</h2>
-              <h3 class="text-2xl"></h3>
-              <h4 class="text-xl">Roll : </h4>
-              <h4>Year: Term: </h4>
-              <h4></h4>
-            </div>
-          </div>
-          <div class="text-center mt-10 mb-1">
-            <h2 class="text-2xl my-2 text-blue-900 text-center">Submision Date : </h2>
-            <h1>Dept of </h1>
-            <h1 class="text-2xl my-2">Faculty of </h1>
-            <h4>Noakhali Science &amp; Technology University</h4>
-          </div>
+          
         </div>
+
+        <div class="table-responsive bg-transparent">
+          <table class="bottom-0 left-0 right-0 w-100 table-bordered bg-transparent">
+            <thead>
+              <tr class="text-center">
+              <th colspan="2">Submitted By</th>
+              <th colspan="2">Submitted To</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th style="width: 15%;min-width: 15%; max-width: 15%;">Name</th>
+                <td style="width: 35%;min-width: 35%; max-width: 35%;">S.h. Mazumder</td>
+                <th style="width: 15%;min-width: 15%; max-width: 15%;">Teacher</th>
+                <td style="width: 35%;min-width: 35%; max-width: 35%;">Shazzad Hossain Mazumder</td>
+              </tr>
+              <tr>
+                <th>ID</th>
+                <td>13701023</td>
+                <th>Designation</th>
+                <td>Lecturer</td>
+              </tr>
+              <tr>
+                <th>Batch</th>
+                <td>48</td>
+                <th>Department</th>
+                <td>Department of CSE</td>
+              </tr>
+              <tr>
+                <th>Department</th>
+                <td>Department of CSE</td>
+                <th>Email</th>
+                <td>shmazumder@feniuniversity.ac.bd</td>
+              </tr>
+              <tr class="text-center">
+                <th colspan="4">Feni University</th>
+              </tr>
+              <tr class="text-center">
+                <th colspan="2">Date of Submission</th>
+                <td colspan="2"></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+
       </div>
 
     </div>
